DTSSTCI-1509 Add respondent bundle due date (#2435)
* [DTSSTCI-1509] CICA bundle initial due date add holiday service

* [DTSSTCI-1509] add holiday service and update feign for bankholidays

* [DTSSTCI-1509] update holiday calculation

* [DTSSTCI-1509] remove trailing lines

* [DTSSTCI-1509] fix checkstyle

* [DTSSTCI-1649] add test junit-platform dependency

* [DTSSTCI-1509] update bankholiday check and tests

* [DTSSTCI-1509] Remove missed comments

* [DTSSTCI-1509] suppress unneccessary tests in bankholiday service

* [DTSSTCI-1509] add tests for service but suppress model and config

* [DTSSTCI-1509] fix sonar issues

* [DTSSTCI-1509] fix checkstyle test

* [DTSSTCI-1509] update IT

* [DTSSTCI-1509] update IT

* [DTSSTCI-1509] fix IT date response format

* [DTSSTCI-1509] update date field label and add to CICA details tab

* [DTSSTCI-1509] address review comments and remove unnecessary shedlock dependency

* [DTSSTCI-1509] fix integration tests after merging master